
25. Fix: to_hexadecimal_digits no longer allowed with pragma ada_95.

26. New: l10n package. [negative tests needed]

27. New: hashed_maps package.

28. New: vectors package.

29. New: case in statement can have multiple test variables and return expressions. [change into a relation function]

30. New: case with multiple variables (like rust, python, and some other languages).

31. New: box <> allowed in case when conditions. [negative tests needed]

32. New: demonstration examples contracts, design_examples, scheduler, side_effects.

33. Fix: parent contracts which raise an exception now propogate the exception.

34. Change: Improved some error messages for context and ease of understanding.

35. Fix: restored a unreachable code by raise test removed when raise..when was added.

36. Fix: [Blady] various OS/X changes.

37. Fix: [Zhu] Slackware / GCC 11 fix.

38. New: Support for Raspian / Debian 11.1 (Bullseye) on Raspberry Pi.

39. New: Support for YAML substitutions.

40. Change: [Beader] identifiers must differ by more than underscores in formal scripts.

41. Change: Changes to configure and provision scripts to support building in Ubuntu Docker container.  Changes not yet made for other O/S.  Example Dockerfile included with source code.

42. Fix: use of constant on record fields vs variable fixed.  Fixed subsequent issues with affirm clauses.  Fixed impacted example programs.

43. Fix: test cases in pragma test are now syntax checked.

44. Fix: written variable test for out parameters only applies if the variable is not auto-declared.

45: New: ${X^^}, ${X^}, ${X,,} for uppercase, lowercase, proper case. [Negative tests required]

46: Change: default for makefile is to build with 4 threads.

47: Fix: doubly linked lists parameters should work correctly. [additional tests needed]

48: New: more examples: luhn.sp.
