@@ -251,6 +251,7 @@ problems.  Click on a title to expand or collapse a box.</p>
 <LI><A HREF="fibonacci.html">fibonacci.sp</A></LI>
 <LI><A HREF="fizzbuzz.html">fizzbuzz.sp</A></LI>
 <LI><A HREF="gss.html">gss.sp</A></LI>
+<LI><A HREF="hanoi.html">hanoi.sp</A></LI>
 <LI><A HREF="monty.html">monty.sp</A></LI>
 <LI><A HREF="yuletide.html">yuletide.sp</A></LI>
 </UL>
