@@ -40,7 +40,7 @@ Their sum is -5
 <b>pragma</b> license( unrestricted );
 
 <b>procedure</b> introsp <b>is</b>
-   bloop : integer := -5;
+   bloop : constant integer := -5;
    e     : string;
    s     : string;
 <b>begin</b>
